docs-archive/apache-airflow-providers-google/20.0.0/_sources/_api/tests/system/google/cloud/gcs/example_sheets/index.rst.txt
tests.system.google.cloud.gcs.example_sheets
============================================

.. py:module:: tests.system.google.cloud.gcs.example_sheets


Attributes
----------

.. autoapisummary::

   tests.system.google.cloud.gcs.example_sheets.ENV_ID
   tests.system.google.cloud.gcs.example_sheets.PROJECT_ID
   tests.system.google.cloud.gcs.example_sheets.DAG_ID
   tests.system.google.cloud.gcs.example_sheets.IS_COMPOSER
   tests.system.google.cloud.gcs.example_sheets.BUCKET_NAME
   tests.system.google.cloud.gcs.example_sheets.SPREADSHEET
   tests.system.google.cloud.gcs.example_sheets.CONNECTION_ID
   tests.system.google.cloud.gcs.example_sheets.log
   tests.system.google.cloud.gcs.example_sheets.create_bucket
   tests.system.google.cloud.gcs.example_sheets.test_run


Module Contents
---------------

.. py:data:: ENV_ID

.. py:data:: PROJECT_ID

.. py:data:: DAG_ID
   :value: 'sheets_gcs'


.. py:data:: IS_COMPOSER

.. py:data:: BUCKET_NAME
   :value: 'bucket_sheets_gcs_Uninferable'


.. py:data:: SPREADSHEET

.. py:data:: CONNECTION_ID
   :value: 'connection_sheets_gcs_Uninferable'


.. py:data:: log

.. py:data:: create_bucket

.. py:data:: test_run

